// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`config/index .(config, index) handles object repos 1`] = `
Object {
  "foo": "bar",
  "maintainYarnLock": true,
  "repoField": "g",
  "repository": "e/f",
}
`;

exports[`config/index .(config, index) massages string repos 1`] = `
Object {
  "foo": "bar",
  "maintainYarnLock": true,
  "repository": "c/d",
}
`;
